--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 mlflow = "^2.6.0"
-ray = {extras = ["tune"], version = "^2.6.3"}
+ray = { extras = ["tune"], version = "^2.6.3" }
 gymnasium = "^0.29.0"
 pytest = "^7.4.0"
 numpy = "^1.25.2"
 torch = "^2.0.1"
 hyperopt = "^0.2.7"
 fsspec = "^2023.6.0"
+jupyter = "^1.0.0"
 
 
 [build-system]
